--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,19 @@ name: Rust
 on: [push]
 
 jobs:
+  build: 
+    name: Build and test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix: os: [ubuntu-latest, macOS-latest]
+      
+    steps:
+    - uses: actions/checkout@v1
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
+      
   build_macos:
     name: Build and test on macOS
     runs-on: macOS-latest
