--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,8 @@ jobs:
     name: Build and test on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix: os: [ubuntu-latest, macOS-latest]
+      matrix: 
+        os: [ubuntu-latest, macOS-latest]
       
     steps:
     - uses: actions/checkout@v1
